@@ -5,7 +5,7 @@
 ?>
 
 <!DOCTYPE html>
-<html <?php language_attributes(); ?>>
+<html <?php language_attributes(); ?> >
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="<?php bloginfo( 'charset' ); ?>">
