@@ -17,13 +17,7 @@
 				<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php printf(__('Permalink to %s', 'darkelements'), the_title_attribute('echo=0')); ?>"> <?php the_title(); ?></a> 
 			</h4>
 
-			<div class="postmetadata">
-				<?php printf( __( 'Posted on %s', 'darkelements' ), '<a href="'. esc_url( get_permalink() ) .'">' . esc_html( get_the_date() ). '</a>' ); ?> <?php echo '|'; ?> 
-				<?php printf( __( 'By %s', 'darkelements' ), sprintf( '<a href="%1$s">%2$s</a>', esc_url( get_author_posts_url( get_the_author_meta( 'ID' ) ) ), esc_html( get_the_author() ) ) ); ?>
-				<?php if ( ! post_password_required() && ( comments_open() || get_comments_number() ) ) : ?>
-					<?php echo '|'; ?> <?php comments_popup_link( __( 'Leave a response', 'darkelements' ), __( '1 response', 'darkelements' ), __( '% responses', 'darkelements' ) ); ?>
-				<?php endif; ?>
-			</div>
+			<?php get_template_part( 'postmeta' ); ?>
 
 			<?php if ( has_post_thumbnail() ) { 
 				the_post_thumbnail(); 
@@ -38,8 +32,8 @@
 		<?php endwhile; ?>
 
 		<div class="post-nav">
-			<?php next_posts_link(__( 'Older posts &raquo;', 'darkelements' )); ?>
-			<?php previous_posts_link(__( '&laquo; Newer posts', 'darkelements' )); ?>
+			<?php next_posts_link(); ?>
+			<?php previous_posts_link(); ?>
 		</div>
 
 		<?php else: ?>
