@@ -1,10 +1,10 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 3.6
+Version: 3.7
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
-Description: DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. That's it. Enjoy. 
+Description: DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
 Tags: two-columns, left-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, featured-images, dark, light, gray, editor-style, translation-ready
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
@@ -67,8 +67,8 @@ table {
 
 
 /* BODY AND CONTAINER */
-body {background:#333; font-family:'Open Sans', sans-serif; font-size:0.9em; color:#ddd; line-height:1.5em;}
-#container {max-width:1000px; float:left; background:none; margin:20px 0 20px 20px; text-align:left; word-wrap:break-word;}
+body {background:#333; font-family:'Open Sans', sans-serif; font-size:0.9em; color:#ddd; line-height:1.5em; text-align:left; word-wrap:break-word;}
+#container {max-width:1000px; float:left; background:none; margin:20px 0 20px 20px;}
 
 
 /* MAIN CONTENT AREA */
@@ -90,20 +90,21 @@ a:hover {color:#e77776;}
 
 strong, b {font-weight:bold;}
 small {font-size:0.75em;}
-big {font-size:1.5em;}
+big {font-size:1.25em;}
 sub {vertical-align:sub; font-size:0.9em;}
 sup {vertical-align:super; font-size:0.9em;}
-ins, mark {font-weight:bold; background:none; color:#e77776;}
+ins, mark {font-weight:bold; background:none; text-decoration:none; color:#e77776;}
 cite, em, abbr, acronym {font-style:italic;}
-code, pre {margin:10px 0; padding:5px 10px; display:block; border:1px solid #444; border-radius:5px; -moz-border-radius:5px;}
-blockquote, q {margin:10px 0; padding:0 0 0 10px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:1px solid #ddd;}
-address {margin:10px 0; padding:0 0 0 10px; display:block; font-size:1.2em; line-height:1.5em; border-left:1px solid #ddd;}
-p {margin:0 0 10px; text-align:justify;}
+code, kbd, samp, var {font-family:monospace, monospace;}
+pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #444;}
+blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #ddd;}
+address {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; border-left:2px solid #ddd;}
+p {margin:0 0 10px;}
 
 
 /* TABLE AND LISTS */
 table {margin:10px 0; border-collapse:collapse;}
-table, th, td {border: 1px solid #444; padding:5px 10px;}
+table, th, td {border:1px solid #444; padding:5px 10px;}
 table th {font-weight:bold;}
 
 ul {list-style:square; margin:5px 0 5px 0;}
@@ -118,8 +119,8 @@ dd {margin:0 0 0 20px;}
 input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #444; padding:2px 5px; background:none; color:#ddd; font-size:1em; font-family:'Open Sans', sans-serif; border-radius:5px; -moz-border-radius:5px;}
 input[type="submit"], input[type="reset"], input[type="button"] {cursor:pointer; border:0; padding:2px 5px; background:#ddd; color:#333;}
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {background:#e77776; color:#ddd;}
-input[type="checkbox"]{-webkit-appearance:checkbox; -moz-appearance:checkbox;}
-input[type="radio"]{-webkit-appearance:radio; -moz-appearance:radio;}
+input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
+input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
 select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
@@ -146,7 +147,7 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 /* HEADER MENU */
 .nav-head {width:100%; clear:both; float:left; padding:5px 0;}
 .nav-head select {display:none;}
-.nav-head ul {padding:0; margin:0; z-index:999;}
+.nav-head ul {padding:0; margin:0; z-index:999; list-style:none;}
 .nav-head ul li {list-style-type: none; position:relative; padding:0; margin:0;}
 .nav-head ul li a {text-decoration:none; padding:5px 0; display:inline-block; width:100%; border-bottom:1px solid #444;}
 .nav-head .current_page_item > a, .nav-head .current_page_parent > a {color:#e77776;}
